Meet Team Alignment Bug #1897

--- a/public/css/style.default.css
+++ b/public/css/style.default.css
@@ -24784,7 +24784,6 @@ contenthover a {
 }
 .meet-team-v1 .profilepic {
   margin-bottom: 20px;
-  min-height: 385px;
 }
 .meet-team-v1 .profilepic-hover {
   opacity: 0;
@@ -27092,7 +27091,7 @@ div[data-type="coming-soon"] .component-inner {
   bottom: 0;
   right: 0;
   background: #000;
-  opacity: 0.8;
+  opacity: 0.7;
   filter: alpha(opacity=80);
   z-index: 999;
 }
