--- a/public/less/components/meet-team-v1.less
+++ b/public/less/components/meet-team-v1.less
@@ -78,7 +78,6 @@
 
   .profilepic {
     margin-bottom: 20px;
-    min-height: 385px;
   }
 
   .profilepic-hover {
